@@ -8,9 +8,15 @@ import java.util.stream.Stream;
 
 public class StreamUsage {
     public static void main(String[] args) {
-        List<Integer> rsl = new ArrayList<>(Arrays.asList(10, -20, 30, -40, 50));
-        Stream<Integer> stream = rsl.stream();
-        rsl = stream.filter(x -> x > 0).collect(Collectors.toList());
+//        List<Integer> rsl = new ArrayList<>(Arrays.asList(10, -20, 30, -40, 50));
+//        Stream<Integer> stream = rsl.stream();
+//        rsl = stream.filter(x -> x > 0).collect(Collectors.toList());
+//        System.out.println(rsl);
+
+//        List<Integer> tasks =
+        List<Integer> rsl = List.of(10, -20, 30, -40, 50).stream()
+                .filter(x -> x > 0)
+                .collect(Collectors.toList());
         System.out.println(rsl);
     }
 }
